--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     dependencies {
         classpath "com.gradle.publish:plugin-publish-plugin:0.10.1"
         //this is for test
-        classpath "gradle.plugin.com.thinkimi.gradle:mybatis-generator-plugin:2.1.2"
+        //classpath "gradle.plugin.com.telenia.gradle:mybatis-generator-plugin:2.1.3"
         //end for test
     }
 }
@@ -16,23 +16,23 @@ plugins {
     id "com.gradle.plugin-publish" version "0.10.1"
 }
 
-group 'com.thinkimi.gradle'
-version '2.1.2'
+group 'com.telenia.gradle'
+version '2.1.3'
 description "Mybatis Gradle Generator Plugin"
 
 apply plugin: 'groovy'
 apply plugin: 'idea'
 apply plugin: "com.gradle.plugin-publish"
 // this is for test
-apply plugin: "com.thinkimi.gradle.MybatisGenerator"
-
-configurations {
-    mybatisGenerator
-}
-mybatisGenerator {
-    verbose = true
-    configFile = 'src/test/resources/autogen/generatorConfig.xml'
-}
+//apply plugin: "com.telenia.gradle.MybatisGenerator"
+//
+//configurations {
+//    mybatisGenerator
+//}
+//mybatisGenerator {
+//    verbose = true
+//    configFile = 'src/test/resources/autogen/generatorConfig.xml'
+//}
 // end for test
 
 repositories {
@@ -48,14 +48,14 @@ dependencies {
 
 
 pluginBundle {
-    website = 'https://github.com/kimichen13/mybatis-generator-plugin.git'
-    vcsUrl = 'https://github.com/kimichen13/mybatis-generator-plugin.git'
+    website = 'https://github.com/teleniasoftware/mybatis-generator-plugin.git'
+    vcsUrl = 'https://github.com/teleniasoftware/mybatis-generator-plugin.git'
     description = "${project.description}"
     tags = ['mybatis', 'generator']
 
     plugins {
         MybatisGenerator {
-            id = 'com.thinkimi.gradle.MybatisGenerator'
+            id = 'com.telenia.gradle.MybatisGenerator'
             displayName = 'Mybatis Gradle Generator Plugin'
         }
     }
