--- a/src/test/docker-compose.yaml
+++ b/src/test/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
       - pg_data:/var/lib/postgresql/data
       - ./initdb.d:/docker-entrypoint-initdb.d
     environment:
-      POSTGRES_USER: thinkimi
+      POSTGRES_USER: telenia
       POSTGRES_DB: postgres
       POSTGRES_PASSWORD: 123456
 
